--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,5 +4,16 @@ server:
 spring:
   application:
     name: users
+  datasource:
+    url: jdbc:h2:file:~/h2/users
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
     open-in-view: true
+  h2:
+    console:
+      enabled: true
