--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,3 +17,8 @@ spring:
   h2:
     console:
       enabled: true
+
+jwt:
+  utils:
+    key: eD7nH9JHgX1Q2YqVrZG3f7qPp0V57D1jE9vNjT2j2Y8=
+    expiration: 900000
